--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,7 +25,10 @@
             android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".TelaDeLogin" />
         <activity android:name=".CadastroActivity" />
-        <activity android:name=".TelaDeChat"></activity>
+        <activity android:name=".TelaDeChat" />
+        <activity
+            android:name=".TarefaNavas"
+            android:label="@string/title_activity_tarefa_navas"></activity>
     </application>
 
 </manifest>
