--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,6 +46,8 @@ dependencies {
     compile 'com.google.firebase:firebase-database:11.4.2'
     compile 'com.google.firebase:firebase-storage:11.4.2'
     compile 'com.google.firebase:firebase-auth:11.4.2'
+    compile 'com.google.firebase:firebase-messaging:11.4.2'
+    compile 'com.google.firebase:firebase-core:11.4.2'
     compile 'com.firebaseui:firebase-ui:3.1.0'
     compile 'com.google.android.gms:play-services-auth:11.4.2'
     compile 'de.hdodenhof:circleimageview:2.2.0'
